--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@
 ## You can copy this file and rename it to .env.local and fill in the required environment variables
 
 # REQUIRED Environment variables
-OST_GITHUB_ID=YOUR_GITHUB_OAUTH_ID
-OST_GITHUB_SECRET=YOUR_GITHUB_OAUTH_SECRET
+OST_GITHUB_ID=Ov23likOrPzUIwna7xLf
+OST_GITHUB_SECRET=879028ad93060442356cf8ea46ccc6c7685d80a0
 OST_TOKEN_SECRET=A_32CHAR_RANDOM_STRING_FOR_YOUR_TOKEN_SECRET
-OST_REPO_SLUG=YOUR_REPOSITORY_SLUG
-OST_REPO_BRANCH=REPO_BRANCH_OR_PR_BRANCH
+OST_REPO_SLUG='hq-doc-lite'
+OST_REPO_BRANCH='main'
 
 # OPTIONAL Environment variables
 # OPENAI_API_KEY=YOUR_OPEN_AI_API_KEY
