--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "outstatic": "latest",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "rehype-pretty-code": "^0.12.6",
     "remark": "^14.0.3",
     "remark-gfm": "^4.0.0",
